--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -9,7 +9,6 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -33,7 +32,12 @@
     <!---
       Above is the CDN stylesheet to get the latest updates for Bootstrap
     --->
-    <title>React App</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap" rel="stylesheet">
+    <!---
+      Above is to get Roboto from Google Fonts
+    --->
+    <link rel="stylesheet" href="./index.css" />
+    <title>UBulletin</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
